Remove dependency on com.hubspot:NioSmtpClient